--- a/package.json
+++ b/package.json
@@ -1,12 +1,18 @@
 {
-  "dependencies": {
-    "webpack": "^5.100.2"
-  },
   "name": "template",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "devDependencies": {
+    "css-loader": "^7.1.2",
+    "file-loader": "^6.2.0",
+    "html-loader": "^5.1.0",
+    "html-webpack-plugin": "^5.6.3",
+    "style-loader": "^4.0.0",
+    "url-loader": "^4.1.1",
+    "webpack": "^5.100.2",
+    "webpack-cli": "^6.0.1",
+    "webpack-dev-server": "^5.2.2",
     "webpack-merge": "^6.0.1"
   },
   "scripts": {
