--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Marigoldens/template.git"
+    "url": "git+https://github.com/Marigoldens/Project-Todo-List"
   },
   "author": "",
   "license": "ISC",
